6.02
    - ExtUtils::Installed->modules() was broken in scalar context
    - Sync bleadperl 16922:  Netware updates from Ananth Kesari.
    - Sync bleadperl 16922:  MM_NW5 tests

6.01 Thu May 30 14:48:57 EDT 2002
    - MacOS Classic fixes from Pudge: recursive make repair,
      post_initialize() now used, DEFINE & INC work with relative paths,
      removed dead hybrid method/function call code.
    * WriteMakefile now a bit more tolerant of wrong arguments, it will
      warn and try to soldier on rather than just vomiting.
    - Netware whitespace nits (bleadperl@16811)
    - Netware Perl version number tag when building dynamic libraries
      needs to match the current perl version instead of being hard coded
      (a mutation of bleadperl@16851)
    - OS/2 bug in TEST_F target found by John Poltorak (bleadperl@16839)
    - README in 6.00 still declared this as alpha.

6.00 Sat May 25 17:14:09 EDT 2002
    - VMS 8-level limit test tweak (bleadperl@16764)
    * Here goes nothing.

5.96_01 Wed May 22 19:11:09 EDT 2002
    - Fixed ExtUtils::testlib so it doesn't taint @INC.
    - Fixed ExtUtils::Command so it groks % shell wildcard on VMS.
      [RT 625]
    - MM now depends on Test::Harness 2.00 on VMS else tests with -T
      won't work, command line too long.
    - Added Craig's patch to fix limited level VMSs in the core.

5.95_01 Sat May 18 14:40:12 EDT 2002
    - Fixed ExtUtils::testlib so it has a reasonable chance of working
      under taint mode.

5.94_02 Fri May 17 17:16:04 EDT 2002
    - Fixing Manifest.t test for relative @INC when core testing.

5.94_01 Fri May 17 14:53:54 EDT 2002
    - Small NetWare change from Novell.
    - worked around 5.005_03's lack of a $Config{siteprefix} and
      $Config{sitebin}.
    - Small cross compilation changes (bleadperl 16582, 16548)

    [[ Test Fixes ]]
    - Fixing ExtUtils::Command tests for VMS shell wildcard differences.
    - Fixing ExtUtils::Installed tests so they don't go looking at already